# jepa-demo

./: .gitignore  ARTICLE.md  FAQ.md  JEPA_VS_PHYSICS.md  LICENSE  LINKEDIN_POST.md  Makefile  PODCAST_SCENARIO.md  README.md  pyproject.toml  requirements.txt
demos/: 01_ijepa_representations.py  02_ijepa_masking_explained.py  03_vjepa_video_classify.py  04_vjepa_action_anticipation.py  05_vjepa_cluster_analysis.py  06_vjepa_cluster_pretrained.py  07_mae_vs_jepa_comparison.py  08_animated_tsne.py  09_vjepa_video_gif.py  10_vjepa_cluster_journey.py  11_playground_in_sthsth_space.py  11_your_own_video.py  12_your_own_latent_space.py  classify_batch.py  classify_sliding.py  make_post_video.py
outputs/: 05_embeddings.npz  08_embeddings.npz  10_embeddings.npz  11_embeddings.npz  12_embeddings_playground_balls.npz  sliding_jepa_paper_opener.txt  sliding_lego_long.txt  sliding_playground_long.txt  sliding_workbench_long.txt  sliding_workbench_slow.txt
